<resources>
    <string name="app_name">BMA 2021</string>
    <string name="login_title">Login</string>
    <string name="login_email_label">Email</string>
    <string name="login_pw_label">Passwort</string>
    <string name="login_button">Login</string>
    <string name="login_register_button">Registrieren</string>

    <string name="register_back">Zurück</string>
    <string name="register_title">Registrieren</string>
    <string name="register_email_label">Email</string>
    <string name="register_firstname_label">Vorname</string>
    <string name="register_lastname_label">Nachname</string>
    <string name="register_PW_label">Passwort</string>
    <string name="register_PW_confirm_label">Passwort bestätigen</string>
    <string name="register_button">Registrieren</string>

    <string name="purchase_title">Einkauf</string>
    <string name="purchase_profile_label">Profil</string>
    <string name="purchase_change_pw_label">Passwort ändern</string>
    <string name="purchase_mypurchases_label">Meine Einkäufe</string>
    <string name="purchase_logout_label">Abmelden</string>
    <string name="purchase_total">Total: </string>
    <string name="purchase_chf">CHF </string>
    <string name="purchase_pay">Bezahlen</string>

    <string name="article_delete">Löschen</string>

    <string name="change_pw_back">Zurück</string>
    <string name="change_pw_title">Passwort ändern</string>
    <string name="change_pw_current_label">Aktuelles Passwort</string>
    <string name="change_pw_new_label">Neues Passwort</string>
    <string name="change_pw_new_conf_label">Neues Passwort bestätigen</string>
    <string name="change_pw_button">Passwort ändern</string>

    <string name="my_purchases_back">Zurück</string>
    <string name="my_purchases_title">Meine Einkäufe</string>

    <string name="show_purchase_back">Zurück</string>
    <string name="show_purchase_title">Einkauf</string>
    <string name="show_purchase_total_label">Total: </string>

    <string name="scan_back">Zurück</string>
    <string name="scan_title">Scan</string>
    <string name="scan_button">Scan</string>
    <string name="scan_article_title">Erkannter Artikel</string>
    <string name="scan_amount_label">Anzahl</string>
    <string name="scan_add">Hinzufügen</string>

    <string name="payment_back">Zurück</string>
    <string name="payment_title">Bezahlen</string>
    <string name="payment_button">Bezahlen</string>

    <string name="payment_confirm_title">Bezahlung erfolgreich</string>
    <string name="payment_confirm_subtitle">Vielen Dank für Ihren Einkauf</string>
    <string name="payment_confirm_button">Neuer Einkauf</string>


    <string name="no_nfc">Dieses Gerät unterstützt kein NFC</string>
    <string name="activate_nfc">Bitte NFC aktivieren in den Geräteeinstellungen</string>


    <string name="preference_file_key_purchase_items">ch.bmz.bma.nfc_retail_android.purchase_items</string>
    <string name="preference_file_key_user">ch.bmz.bma.nfc_retail_android.user</string>


    <string name="internet_error">Verbindungsprobleme sind aufgetreten</string>
    <string name="wrong_pw">Falsche Email oder Passwort</string>
    <string name="duplicate_email">Diese Email-Adresse existiert bereits</string>
    <string name="invalid_email">Bitte eine gültige Email-Adresse angeben</string>
    <string name="invalid_name">Bitte gültige Namen angeben</string>
    <string name="invalid_pw">Bitte gültiges Passwort angeben (mind. 6 Zeichen)</string>
    <string name="sth_went_wrong">Etwas ist schiefgelaufen, überprüfen Sie ihre Eingaben</string>
    <string name="no_payment_method">Bitte Zahlmethode auswählen</string>
    <string name="no_purchase_items">Der Warenkorb ist noch leer, bitte füllen</string>

</resources>