<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/registerBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_back" />
        </FrameLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="24sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/registerEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_email_label" />

        <EditText
            android:id="@+id/registerEmailInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/registerFirstnameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_firstname_label" />

        <EditText
            android:id="@+id/registerFirstnameInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/registerLastnameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_lastname_label" />

        <EditText
            android:id="@+id/registerLastnameInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/registerPWLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_PW_label" />

        <EditText
            android:id="@+id/registerPWInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/registerPWConfirmLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_PW_confirm_label" />

        <EditText
            android:id="@+id/registerPWConfirmInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/registerError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:visibility="gone">

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/registerErrorLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FF0000" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>