<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ScanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/scanBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_back" />

        </FrameLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/scanTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_title"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/scanArticleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_article_title"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/scanArticleID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/scanArticleDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/scanAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_amount_label" />

        <EditText
            android:id="@+id/scanAmount"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <LinearLayout
            android:id="@+id/scanError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/scanErrorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/scanAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_add" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>