<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ChangePWActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/changePWBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_pw_back" />
        </FrameLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/changePWTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pw_title"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/changePWCurrentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pw_current_label" />

        <EditText
            android:id="@+id/changePWCurrentInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/changePWNewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pw_new_label" />

        <EditText
            android:id="@+id/changePWNewInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/changePWNewConfLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pw_new_conf_label" />

        <EditText
            android:id="@+id/changePWNewConfInput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/changePWError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:visibility="gone">

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/changePWErrorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/changePWButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pw_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>