<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PaymentConfirmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/paymentConfirmTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_confirm_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/paymentConfirmSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_confirm_subtitle"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/paymentConfirmMethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/paymentConfirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_confirm_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>