<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/paymentBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_back" />
        </FrameLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/paymentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_title"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <RadioGroup
            android:id="@+id/paymentOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </RadioGroup>

        <LinearLayout
            android:id="@+id/paymentError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:visibility="gone">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/paymentErrorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/paymentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>